--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "timekeep-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@prisma/client": "^3.7.0",
     "@testing-library/jest-dom": "^5.16.1",
