--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "express": "^4.17.2",
+    "firebase": "^9.6.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.2",
     "webpack-dev-server": "^4.7.2"
   }
 }
