--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/open-sans": "^4.5.2",
+    "@fontsource/raleway": "^4.5.0",
+    "@mui/material": "^5.2.8",
     "@prisma/client": "^3.7.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -14,11 +21,13 @@
     "@types/react-dom": "^17.0.11",
     "express": "^4.17.2",
     "firebase": "^9.6.2",
+    "framer-motion": "^5.5.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "ts-loader": "^9.2.6",
