--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
     "express": "^4.17.2",
     "firebase": "^9.6.2",
     "framer-motion": "^5.5.7",
