--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/index.js",
+    "hack": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
