--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^5.5.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "pg": "^8.7.1",
     "prisma": "^3.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,7 +43,7 @@
   "scripts": {
     "start": "node server/index.js",
     "hack": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && prisma migrate deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "migrate": "npx prisma migrate dev --name"
