init: add engines

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "timekeep-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.13.1"
+  },
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
@@ -30,9 +33,9 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "start": "node server/index.js",
+    "start": "node server/index.js && node prisma/seed.js",
     "hack": "react-scripts start",
-    "build": "react-scripts build && prisma migrate deploy",
+    "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "migrate": "npx prisma migrate dev --name"
