--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "start": "node server/index.js && node prisma/seed.js",
+    "start": "node server/index.js ",
     "hack": "react-scripts start",
     "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "migrate": "npx prisma migrate dev --name"
+    "migrate": "npx prisma migrate dev --name",
+    "release": "prisma migrate deploy && node prisma/seed.js"
   },
   "eslintConfig": {
     "extends": [
