--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "migrate": "npx prisma migrate dev --name",
-    "release": "prisma migrate deploy && node prisma/seed.js"
+    "migrate": "npx prisma migrate dev --name"
   },
   "eslintConfig": {
     "extends": [
