--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "ts-loader": "^9.2.6",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.2",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
