--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "migrate": "npx prisma migrate dev --name"
+    "migrate": "npx prisma migrate dev --name",
+    "release": "npx prisma migrate deploy && node prisma/seed.js"
   },
   "eslintConfig": {
     "extends": [
